[package]
name = "s3-empty"
version = "0.1.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
structopt = "0.3.17"
tokio = { version = "0.2.22", default-features = false }
anyhow = "1.0.32"
